@@ -194,7 +194,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>--enable-preview -Dnet.bytebuddy.experimental=true</argLine>
                     <systemPropertyVariables>
                         <java.version>${java.version}</java.version>
                     </systemPropertyVariables>
